package Model.Weapons;

/** Types d'armes disponibles. */
public enum WeaponType {
    MISSILE,
    BOMB,
    SONAR
}
